chore(core): add build-tracer-client as deps of lint and typecheck

--- a/packages/core/moon.yml
+++ b/packages/core/moon.yml
@@ -22,3 +22,11 @@ tasks:
     outputs:
       - "src/generated/openapi"
     command: openapi --client axios --input ./tracer.spec.json --name MongoTracer --output ./src/generated/openapi
+
+  typecheck:
+    deps:
+      - build-tracer-client
+
+  lint:
+    deps:
+      - build-tracer-client
