--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -27,6 +27,7 @@ jobs:
         uses: CodSpeedHQ/action@main
         with:
           run: |
+            pnpm --filter vitest-runner bench
             pnpm moon run --concurrency 1 :bench
             pnpm --workspace-concurrency 1 -r bench-tinybench
             pnpm --workspace-concurrency 1 -r bench-benchmark-js
