--- a/packages/vitest-runner/package.json
+++ b/packages/vitest-runner/package.json
@@ -17,6 +17,9 @@
   "repository": "https://github.com/CodSpeedHQ/codspeed-node",
   "homepage": "https://codspeed.io",
   "license": "Apache-2.0",
+  "scripts": {
+    "bench": "vitest bench"
+  },
   "devDependencies": {
     "vitest": "1.0.0-beta.0"
   },
