--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -24,10 +24,9 @@ jobs:
 
       - name: Run benchmarks
         # use version from `main` branch to always test the latest version, in real projects, use a tag, like `@v1`
-        uses: CodSpeedHQ/action@main
+        uses: CodSpeedHQ/action@feat/introspection-exit-code
+        env:
+          CODSPEED_DEBUG: true
         with:
           run: |
             pnpm --filter vitest-runner bench
-            pnpm moon run --concurrency 1 :bench
-            pnpm --workspace-concurrency 1 -r bench-tinybench
-            pnpm --workspace-concurrency 1 -r bench-benchmark-js
